# q-recognizer

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  demo.rs  index.html
examples/src/: app.rs  main.rs
src/: geometry.rs  gesture.rs  lib.rs  point.rs  point_cloud_recognizer.rs  point_cloud_recognizer_plus.rs  q_point_cloud_recognizer.rs
