[package]
name = "q-recognizer"
version = "0.1.0"
edition = "2021"
authors = ["Ferran Pujol Camins"]
readme = "README.md"
repository = "https://github.com/ferranpujolcamins/q-recognizer"
license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["gesture", "recognition", "gesture-recognition"]
categories = ["graphics", "gui"]

[[example]]
name = "q-recognize-demo"
path = "examples/demo.rs"

[dev-dependencies]
egui = "0.30"
eframe = "0.30"
egui_extras = "0.30"