[package]
name = "q-recognizer"
description = "Rust implementation of the $Q, $P, and $P+ gesture recognizers."
version = "0.1.1"
edition = "2021"
authors = ["Ferran Pujol Camins"]
readme = "README.md"
repository = "https://github.com/ferranpujolcamins/q-recognizer"
license = "BSD-3-Clause"
keywords = ["gesture", "recognition", "gesture-recognition"]
categories = ["graphics", "gui"]

[[example]]
name = "q-recognize-demo"
path = "examples/demo.rs"
required-features = ["serde"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
egui = "0.30"
eframe = "0.30"
egui_extras = "0.30"